--- a/KLS_WEB/KLS_WEB/Views/Travels/Details.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Travels/Details.cshtml
@@ -166,7 +166,7 @@
 <div class="data-content px-4 text-left d-none" id="div-requisitos">
     <div class="p-4">
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-6">
                 <h4>REQUISITOS CARGA</h4>
 
                 <div class="p-4 shadow bg-white">
@@ -245,7 +245,7 @@
                 </div>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-6">
                 <h4>REQUISITOS DESCARGA</h4>
 
                 <div class="p-4 shadow bg-white">
@@ -337,7 +337,7 @@
 <div class="data-content px-4 text-left d-none" id="div-mercancias">
     <div class="p-4">
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-6">
                 <h4>Mercancia</h4>
                 <div class="p-4 shadow bg-white mb-3">
                     <h6>Descripción</h6>
@@ -460,7 +460,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-6">
                 <h4 class="invisible">...</h4>
                 <div class="p-4 shadow bg-white">
                     <h6>Requisitos especiales</h6>
@@ -714,7 +714,7 @@
                                 <td>${fechacarga}</td>
                                 <td>${usuario}</td>                               
                                 <td class="text-center">
-                                    <a onclick="downloadFile('${nombre}')">
+                                    <a onclick="downloadFile('${nombre}','${fullpath}')">
                                         <span class="material-icons">
                                             file_download
                                         </span>
@@ -776,10 +776,10 @@
             $(this).siblings(".custom-file-label").addClass("selected").html(fileName);
         });         
 
-        function downloadFile(nombre) {
-            console.log({ nombre });
+        function downloadFile(nombre, fullpath) {
+            console.log({ nombre, fullpath });
             var a = $("<a>")
-                .attr("href", "/Resources/Facturas/" + nombre)
+                .attr("href", fullpath)
                 .attr("download", nombre)
                 .appendTo("body");
 
