--- a/KLS_WEB/KLS_WEB/Views/Route/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Route/Index.cshtml
@@ -49,10 +49,10 @@
             loadState();
         });
 
-        function AddEdit(id, button) {
+        function AddEdit(id, idgenerado, button) {
             const boton = jQuery(button);
             boton.attr('disabled', true);
-            $.get(`Route/AddEdit/${id}`, function (res) {
+            $.get(`Route/AddEdit/${id}`, { idgenerado: idgenerado }, function (res) {
                 boton.attr('disabled', false);
                 $('.body').html(res);
             }).fail(function (error) {
@@ -93,6 +93,7 @@
             $.get("Route/getRoute", function (res) {
                 dataCity = res;
                 $.each(res, (item, key) => {
+                    const IdGenerado = `${String(key.id_ciudadorigen).padStart(4, '0')}${String(key.id_ciudaddestino).padStart(4, '0')}`;
                     let indice_co = catCiudad.findIndex(service => service.id === key.id_ciudadorigen);
                     let indice_cd = catCiudad.findIndex(service => service.id === key.id_ciudaddestino);
                     let indice_eo = catEstado.findIndex(service => service.id === key.id_estadoorigen);
@@ -100,31 +101,31 @@
                     const color = nCon(key.seguridad) == 'Alto' ? 'success' : nCon(key.seguridad) == 'Medio' ? 'warning' : 'danger';
                     const status = nCon(key.estatus) == 1 ? 'Activo' : 'Inactivo';
                     $("#table-info").append(`
-                                <tr class="text-uppercase">
-                                <td>${nCon(key.id)}</td>
-                                <td>${catEstado[indice_eo].nombre}</td>
-                                <td>${catCiudad[indice_co].nombre}</td>
-                                <td>${catEstado[indice_ed].nombre}</td>
-                                <td>${catCiudad[indice_cd].nombre}</td>
-                                <td>${nCon(key.totalkilometros)} km</td>
-                                <td class="font-weight-bold text-${color}">${nCon(key.seguridad)}</td>
-                                <td class="text-center">${status}</td>
-                                <td class="text-center">
-                                    <button type="button" class="btn btn-sm" onclick="AddEdit(${nCon(key.id)}, this);" style="background-color: #ffffff00;">
-                                        <span class="material-icons details">
-                                            search
-                                        </span>
-                                    </button>
-                                </td>
-                                </tr>`);
+                                        <tr class="text-uppercase">
+                                        <td>${IdGenerado}</td>
+                                        <td>${catEstado[indice_eo].nombre}</td>
+                                        <td>${catCiudad[indice_co].nombre}</td>
+                                        <td>${catEstado[indice_ed].nombre}</td>
+                                        <td>${catCiudad[indice_cd].nombre}</td>
+                                        <td>${nCon(key.totalkilometros)} km</td>
+                                        <td class="font-weight-bold text-${color}">${nCon(key.seguridad)}</td>
+                                        <td class="text-center">${status}</td>
+                                        <td class="text-center">
+                                            <button type="button" class="btn btn-sm" onclick="AddEdit(${nCon(key.id)}, '${IdGenerado}', this);" style="background-color: #ffffff00;">
+                                                <span class="material-icons details">
+                                                    search
+                                                </span>
+                                            </button>
+                                        </td>
+                                        </tr>`);
                 });
                 dTable("table-rutas");
                 $('#table_length').html(`
-                    <button onclick="AddEdit();" class="btn btn-sm btn-outline-secondary float-right">
-                        <span class="material-icons">
-                            add
-                        </span>
-                    </button>`).show();
+                            <button onclick="AddEdit();" class="btn btn-sm btn-outline-secondary float-right">
+                                <span class="material-icons">
+                                    add
+                                </span>
+                            </button>`).show();
             }).fail(function (error) {
                 dToast("error", "Error al tratar de obtener los registros, intenta cerrar sesión y volver a iniciar.", "Error");
             });
